# toolstr

./: .gitignore  README.md  pyproject.toml  setup.py
toolstr/: __init__.py  blocks.py  formatting.py  indents.py  outlines.py  spec.py
toolstr-rust/: Cargo.toml
toolstr-rust/crates/toolstr/: Cargo.toml
toolstr-rust/crates/toolstr/src/: box_format.rs  exceptions.rs  lib.rs
toolstr-rust/crates/toolstr/src/binary_format/: types.rs
toolstr-rust/crates/toolstr/src/number_format/: process.rs  str_convert.rs
toolstr-rust/crates/toolstr/src/string_format/: types.rs
toolstr-rust/crates/toolstr/src/table_formats/: cell_format.rs  column_format.rs  mod.rs  table_types.rs
toolstr-rust/crates/toolstr/src/table_formats/polars_format/: datum_format.rs  series_format.rs
toolstr-rust/src/: box_format.rs  exceptions.rs  lib.rs  multiline_format.rs
toolstr-rust/src/number_format/: interface.rs  types.rs  types_tests.rs
toolstr-rust/src/table_formats/: column_format.rs  table_format.rs
toolstr-rust/src/table_formats/polars_format/: dataframe_format.rs  mod.rs
toolstr/buffers/: __init__.py  stdout_utils.py
toolstr/charts/: README.md  __init__.py  braille.py  char_dicts.py  chart_dicts.py  grid_utils.py  line_utils.py  plot_utils.py  raster_utils.py  render_utils.py  sextant_utils.py
toolstr/formats/: __init__.py  bullet_formats.py  column_formats.py  datatype_formats.py  positional_formats.py  rich_formats.py  template_formats.py
toolstr/outlines/: __init__.py  outline_chars.py  outline_printing.py
toolstr/summaries/: __init__.py  nested_summary.py  set_summary.py
toolstr/tables/: __init__.py  multiline_tables.py  table_adapters.py  table_streams.py  table_utils.py
