[package]
name = "toolstr"
description = "utilities for formatting data into String's"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/sslivkoff/toolstr"
repository = "https://github.com/paradigmxyz/cryo"

[dependencies]
colored = { git = "https://github.com/colored-rs/colored", rev = "d4da0f4192c912816ef9baaaa0768f86167ea849" }
chrono = "0.4.31"
polars = { version = "0.35.4", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
    "mode",
] }
regex = "1.3.6"
unicode-truncate = "0.2.0"
