
[workspace]
members = ["crates/toolstr", "crates/toolstr-colored"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sslivkoff/toolstr"
repository = "https://github.com/sslivkoff/toolstr"
exclude = [".github/"]

